fix: Bottom extra space to radio-image customizer control

--- a/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
@@ -3835,10 +3835,6 @@ input[type="text"].select2-search__field {
   height: 49px;
 }
 
-#customize-control-astra-settings-footer-adv .image label {
-  margin-bottom: 12px;
-}
-
 .customize-control-ast-responsive-background {
   position: relative;
   margin-bottom: -5px;
